--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 		</div>		
 	</div>
 		
-		<div id="roll" class="page">
+		<div id="roll" class="page" style="position:relative;">
 			<div id="slide" class="page">
 				<ul id="slide_list">
 					<li class="slide_item">
