--- a/commonHtml/header.html
+++ b/commonHtml/header.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<link rel="stylesheet" href="commonCss/header.css" />
-		<link rel="stylesheet" href="css/base.css" />
-		<script type="text/javascript" src="js/jquery.js" ></script>
-		<!--<script type="text/javascript" src="../js/index.js" ></script>-->
-		<!--<script type="text/javascript" src="../js/special.js" ></script>
-		<script type="text/javascript" src="../js/index_model.js" ></script>-->
-	</head>
-	<body>
-		<div class="header t">
+
 			<div class="topbar t">
 				<div class="cTopbar c">
 					<ul id="bar_left">
@@ -21,8 +8,8 @@
 					</ul>
 					<ul id="bar_right">
 						<li class="bar_li_r">
-							<a href="http://127.0.0.1:8020/ASUS/login.html" class="bar_a">登录</a> |
-							<a href="http://127.0.0.1:8020/ASUS/register.html" class="bar_a">注册</a>
+							<a href="login.html" class="bar_a">登录</a> |
+							<a href="register.html" class="bar_a">注册</a>
 						</li>
 						<li class="bar_li_r">
 							<a href="#" class="bar_a">消息</a>
@@ -44,66 +31,66 @@
 		<div id="header_main" class="t">
 			<div class="cHeader c">
 				<div id="logo">
-					<a href="http://127.0.0.1:8020/ASUS/index.html">
+					<a href="index.html">
 						<img src="img/index/logo.png" style="width: 150px;height: 60px;"/>
 					</a>
 				</div>
 				<div class="nav">
 					<div class="menu">
 						<ul>
-							<li class="menu_li"><a href="http://127.0.0.1:8020/ASUS/index.html" class="menu_a">华硕官网</a></li>
-							<li class="menu_li menu_li1"><a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="menu_a">个人及家用产品</a>
+							<li class="menu_li"><a href="index.html" class="menu_a">华硕官网</a></li>
+							<li class="menu_li menu_li1"><a href="goods_list.html" class="menu_a">个人及家用产品</a>
 								<ul id="child_top_nav_1" class="nav_show nav_1">
 									<li class="show_li">
-										<a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="show_a">
+										<a href="goods_list.html" class="show_a">
 											<p><img src="img/show/1.png" style="width: 40px;height: 40px;"/></p>
 											<p style="padding-top:5px ;">笔记本电脑</p>
 										</a>
 									</li>
 									<li class="show_li">
-										<a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="show_a">
+										<a href="goods_list.html" class="show_a">
 											<p><img src="img/show/2.png" style="width: 40px;height: 40px;"/></p>
 											<p style="padding-top:5px ;">笔记本电脑</p>
 										</a>
 									</li>
 									<li class="show_li">
-										<a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="show_a">
+										<a href="goods_list.html" class="show_a">
 											<p><img src="img/show/3.png" style="width: 40px;height: 40px;"/></p>
 											<p style="padding-top:5px ;">笔记本电脑</p>
 										</a>
 									</li>
 									<li class="show_li">
-										<a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="show_a">
+										<a href="goods_list.html" class="show_a">
 											<p><img src="img/show/4.png" style="width: 40px;height: 40px;"/></p>
 											<p style="padding-top:5px ;">笔记本电脑</p>
 										</a>
 									</li>
 									<li class="show_li">
-										<a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="show_a">
+										<a href="goods_list.html" class="show_a">
 											<p><img src="img/show/1.png" style="width: 40px;height: 40px;"/></p>
 											<p style="padding-top:5px ;">笔记本电脑</p>
 										</a>
 									</li>
 									<li class="show_li">
-										<a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="show_a">
+										<a href="goods_list.html" class="show_a">
 											<p><img src="img/show/2.png" style="width: 40px;height: 40px;"/></p>
 											<p style="padding-top:5px ;">笔记本电脑</p>
 										</a>
 									</li>
 									<li class="show_li">
-										<a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="show_a">
+										<a href="goods_list.html" class="show_a">
 											<p><img src="img/show/3.png" style="width: 40px;height: 40px;"/></p>
 											<p style="padding-top:5px ;">笔记本电脑</p>
 										</a>
 									</li>
 									<li class="show_li">
-										<a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="show_a">
+										<a href="goods_list.html" class="show_a">
 											<p><img src="img/show/4.png" style="width: 40px;height: 40px;"/></p>
 											<p style="padding-top:5px ;">笔记本电脑</p>
 										</a>
 									</li>
 									<li class="show_li">
-										<a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="show_a">
+										<a href="goods_list.html" class="show_a">
 											<p><img src="img/show/1.png" style="width: 40px;height: 40px;"/></p>
 											<p style="padding-top:5px ;">笔记本电脑</p>
 										</a>
@@ -115,7 +102,7 @@
 										</a>
 									</li>
 									<li class="show_li">
-										<a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="show_a">
+										<a href="goods_list.html" class="show_a">
 											<p><img src="img/show/3.png" style="width: 40px;height: 40px;"/></p>
 											<p style="padding-top:5px ;">笔记本电脑</p>
 										</a>
@@ -127,7 +114,7 @@
 										</a>
 									</li>
 									<li class="show_li">
-										<a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="show_a">
+										<a href="goods_list.html" class="show_a">
 											<p><img src="img/show/1.png" style="width: 40px;height: 40px;"/></p>
 											<p style="padding-top:5px ;">笔记本电脑</p>
 										</a>
@@ -140,8 +127,8 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu_li menu_li2"><a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="menu_a">热门活动</a></li>
-							<li class="menu_li menu_li3"><a href="http://127.0.0.1:8020/ASUS/goods_list.html" class="menu_a">商用产品</a>
+							<li class="menu_li menu_li2"><a href="goods_list.html" class="menu_a">热门活动</a></li>
+							<li class="menu_li menu_li3"><a href="goods_list.html" class="menu_a">商用产品</a>
 								<ul id="child_top_nav_1" class="nav_show nav_2" >
 									<li class="show_li">
 										<a href="#" class="show_a">
@@ -175,7 +162,7 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu_li menu_li4"><a href="http://127.0.0.1:8020/ASUS/surport.html" class="menu_a">服务与支持</a>
+							<li class="menu_li menu_li4"><a href="surport.html" class="menu_a">服务与支持</a>
 								<ul id="child_top_nav_1" class="nav_show nav_3">
 									<li class="show_li">
 										<a href="#" class="show_a">
@@ -231,7 +218,4 @@
 		</div>	
 		
 	
-	</div>
-		
-	</body>
-</html>
+
